<resources>
    <string name="app_name">FunPark</string>
    <string name="mainActivity_Button_Admin">Admin</string>
    <string name="mainActivity_Button_Visitor">Visitor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_visitor">Visitor</string>
    <string name="title_activity_tickets">Tickets</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_delete_visitor">Delete visitor</string>
    <string name="title_activity_visitor_details">Details visitor</string>
    <string name="title_activity_create_visitor">Create visitor</string>
    <string name="title_activity_delete_ticket">Delete ticket</string>
    <string name="title_activity_ticket_details">Details ticket</string>
    <string name="title_activity_create_ticket">Create ticket</string>
    <string name="title_activity_salestickets">Sales tickets</string>
    <string name="title_activity_saleticket">Detail sale ticket</string>

    <string name="action_settings">Settings</string>
    <string name="settings_dark_mode">DarkMode</string>
    <string name="settings_translation">Change language</string>
    <string name="settings_about">About</string>
    <string name="action_error">Something went wrong</string>
    <string name="action_accept">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="visitor_delete_msg">Do you really want to delete %s ?</string>
    <string name="ticket_delete_msg">Do you really want to delete %s ?</string>
    <string name="visitor_deleted">deleted visitor</string>
    <string name="ticket_deleted">deleted ticket</string>
    <string name="visitor_edited">Visitor edited</string>
    <string name="ticket_edited">Ticket edited</string>

    <string name="firstName">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="birthDate">Birthdate</string>
    <string name="visitDate">Date of the visit</string>
    <string name="ticketType">Type of ticket</string>

    <string name="ticketNameEn">Ticket name english</string>
    <string name="ticketNameFr">Ticket name french</string>
    <string name="priceSummer">Price summer</string>
    <string name="priceWinter">Price winter</string>
    <string name="duration">Duration</string>

    <string name="pref_header_about">About</string>
    <string name="pref_about_text">Here our application make during Android studio course</string>

    <string-array name="pref_language_list_titles" translatable="false">
        <item>English</item>
        <item>Français</item>
    </string-array>
    <string-array name="pref_language_list_values" translatable="false">
        <item>en</item>
        <item>fr</item>
    </string-array>

</resources>