<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.visitor.VisitorDetailActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/birthDate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/visitDate"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/visitDate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDate" />

    <Spinner
        android:id="@+id/ticketType"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitDate" />

</androidx.constraintlayout.widget.ConstraintLayout>