<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.salesTicket.SalesTicketDetailActivity">

    <ImageView
        android:id="@+id/QrTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="134dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="151dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="42dp"
        android:ems="10"
        android:hint="@string/ticketNameEn"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/QrTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QrTicket" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <EditText
        android:id="@+id/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/birthDate"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname" />

</androidx.constraintlayout.widget.ConstraintLayout>