<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ticket.TicketDetailActivity">

    <EditText
        android:id="@+id/ticketName"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ticketName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/priceSummer"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/priceSummer"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketName" />

    <EditText
        android:id="@+id/priceWinter"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/priceWinter"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceSummer" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/duration"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceWinter" />

    <Spinner
        android:id="@+id/ticketType"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

</androidx.constraintlayout.widget.ConstraintLayout>